# OOP2025LAB3

./: CMakeLists.txt  README.md
include/: Array.h  Figure.h  Rectangle.h  Square.h  Triangle.h
src/: Array.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp  main.cpp
tests/: test_figures.cpp
